# searchless-chess

./: .gitignore  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
data/puzzles/: test_puzzles.feather
data/samples/: sample_stage_0.csv  sample_stage_1.csv  sample_stage_2.csv  sample_stage_3.csv
data/stage_0_raw/: sample_stage_0.parquet
data/stage_1_deduplicated/: sample_stage_1.parquet
data/stage_2_deduplicated/: sample_stage_2.parquet
data/stage_3_joined/: sample_stage_3.parquet
docs/: model_loading_guide.md  quick_start.md  release_v_1_0_0.md
notebooks/: 01_testing_chessai_class.ipynb  02_preparing_puzzles_to_test_elo.ipynb  03_testing_model_elo_on_lichess_puzzles.ipynb  04_preparing_models_summary.ipynb  05_exporting_models_details.ipynb  projektowanie_klasy.ipynb
scripts/: download_data.py  stage_0_download_data.py  stage_1_deduplicate_data.py  stage_2_deduplicate_data.py  stage_3_split.py  stage_4_upload_to_hf.sh  stage_5_unification.py
scripts/data_preparation/: stage_0_download_data.py  stage_5_unification.py
scripts/training/: model_01_cnn_s.py  model_02_resnet_m.py  model_03_resnet_l.py  model_04_resnet_xl.py  model_05_vit_s.py  model_06_vit_m.py
src/: data_downloading.py  data_processing.py  download_data.py
src/chess_ai/core/: model.py
src/models/: resnet.py  resnet_cnn.py  shallow_cnn.py  visual_transformer.py
src/training/: callbacks.py
src/utils/: logger.py  tools.py
tests/: test_data_downloading.py  test_data_processing.py  test_download_data.py
