[project]
name = "searchless-chess"
version = "0.1.0"
description = "Master-Level Chess Without Search"
authors = [
    {name = "Mateusz Grzyb",email = "mwgrzyb@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <4.0" 
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)",
    "chess (>=1.11.2,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "keras (>=3.12.0,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "polars[rtcompat] (>=1.35.2,<2.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "zstandard (>=0.25.0,<0.26.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]
